Version: 1.2.4
Date: 01. 03. 2023
  Balancing:
    - Increased mining radius of advanced burner mining drill to make building new mining setups easier.  This may break existing mining setups if you have mixed ores.
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 18. 12. 2020
  Changes:
    - Updated for Factorio version 1.1.
  Balancing:
    - Burner Automation technology doesn't cost any more in marathon mode--this helps to set up production quicker.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 04. 07. 2020
  Changes:
    - Changed the default setting for the option of module slots in burner machines.  Now it is disabled by default.
  Bugfixes:
    - Fixed that since the electric mining drill update, the Advanced Burner Mining drill wouldn't show the proper graphics when it was mining with a fluid.  Now it's fixed, & it shows the proper graphics.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 27. 06. 2020
  Changes:
    - The mod now uses a script to help automatically add Automation Science Pack as a prerequisite to any technologies that need it.
    - The recipes for Burner Oil Refinery & Burner Chemical Plant now take the same time to craft as their electric counterparts.  They take the same amount of time in normal mode & marathon mode.
  Minor Features:
    - The Air Filter recipe now has an emissions multiplier of 0.7.
    - Added better compatibility with the Simple Silicon mod & the Burner Offshore Pump mod.
  Bugfixes:
    - Fixed that the icon for the Burner Pumpjack was the wrong size in belts and chests.
    - Automation 3 technology now requires Automation 2 & Lubricant technologies.
    - The Special Power Armor item from the MilitarySupply scenario now has the "hidden" flag so that it doesn't appear in item selection GUIs anymore.